--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta
                 name="description"
-                content="Mind Map Wizard: Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+                content="Guide your curiosity! Just type in a topic to create mind maps easily. That’s it! You’ll get your mind map instantly. It’s free, no sign-up needed and it’s open source.">
             <meta
                 name="keywords"
-                content="mind map, mind mapping, AI, text to mindmap, free mind map generator, no sign up, no ads">
+                content="mind map, mind mapping, AI, text to mind map, free mind map generator, no sign up, no ads">
 
             <meta property="og:title" content="Mind Map Wizard | Text to Mind Map AI">
             <meta
                 property="og:description"
-                content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+                content="Guide your curiosity! Just type in a topic to create mind maps easily. That’s it! You’ll get your mind map instantly. It’s free, no sign-up needed and it’s open source.">
             <meta property="og:image" content="/img/meta-img.jpg">
 
             <meta property="og:type" content="website">
@@ -25,7 +25,7 @@
             <meta name="twitter:title" content="Mind Map Wizard | Text to Mind Map AI">
             <meta
                 name="twitter:description"
-                content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+                content="Guide your curiosity! Just type in a topic to create mind maps easily. That’s it! You’ll get your mind map instantly. It’s free, no sign-up needed and it’s open source.">
             <meta name="twitter:image" content="/img/meta-img.jpg">
 
             <link rel="icon" type="image/png" href="/img/favicon16.png" sizes="16x16">
@@ -45,7 +45,24 @@
             <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.16.1"></script>
             <script src="https://cdn.jsdelivr.net/npm/markmap-view@0.16.0"></script>
             <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader@0.16"></script>
-
+            <!-- Google Tag Manager -->
+            <script>
+                (function (w, d, s, l, i) {
+                    w[l] = w[l] || [];
+                    w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+                    var f = d.getElementsByTagName(s)[0],
+                        j = d.createElement(s),
+                        dl = l != 'dataLayer'
+                            ? '&l=' + l
+                            : '';
+                    j.async = true;
+                    j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                    f
+                        .parentNode
+                        .insertBefore(j, f);
+                })(window, document, 'script', 'dataLayer', 'GTM-TF3MJBX9');
+            </script>
+            <!-- End Google Tag Manager -->
             <style>
                 :root {
                     --primary-color: #C667FF;
@@ -60,6 +77,16 @@
                     box-sizing: border-box;
                     margin: 0;
                     padding: 0;
+                }
+
+                @font-face {
+                    font-family: 'Open Sans';
+                    src: url("/OpenSans-ExtraBold.ttf") format('truetype'), url("/OpenSans-ExtraBold.ttf") format('ttf');
+                    font-weight: 800;
+                    font-style: normal;
+                    font-display: swap;
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
                 }
 
                 body {
@@ -298,6 +325,10 @@
                     transition: color 0.3s ease;
                 }
 
+                .nav-links a:hover {
+                    color: var(--primary-color);
+                }
+
                 @media (max-width: 800px) {
                     .nav-links {
                         display: none;
@@ -348,17 +379,19 @@
                 }
 
                 .header-badge {
-                    background-color: #1e293b;
-                    border: 1px solid #d5d5d5;
-                    color: #ffffff;
+                    background: linear-gradient(to bottom, #c1ff72, #acdf6a);
+                    border: none;
+                    color: #1e293b;
                     border-radius: 20px;
                     padding: 1px 16px !important;
                     width: fit-content;
+                    font-weight: 550;
+                    font-size: 1.2rem;
                 }
 
-                @media (max-width: 720px) {
+                @media (max-width: 750px) {
                     .header-badge {
-                        display: none;
+                        font-size: 1rem;
                     }
                 }
                 .header h1 {
@@ -374,6 +407,7 @@
                     margin-bottom: 20px;
                     color: var(--text-color);
                     font-size: 1.3rem;
+                    background-color: #F5F5F7;
                 }
 
                 .centered-div {
@@ -393,7 +427,7 @@
                 }
 
                 .popup {
-                    display: none;
+                    display: flex;
                     position: fixed;
                     top: 0;
                     width: 100%;
@@ -484,12 +518,12 @@
                     align-items: center;
                     background-color: #ffffff;
                     position: relative;
+                    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
                 }
 
                 .input-wrapper:focus-within {
                     outline: none;
                     border-color: var(--primary-color);
-                    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
                 }
 
                 .input {
@@ -739,7 +773,6 @@
                     text-overflow: ellipsis;
                     display: -webkit-box;
                     -webkit-box-orient: vertical;
-                    -webkit-line-clamp: 1;
                     white-space: normal;
                     max-width: 100%;
                 }
@@ -1162,6 +1195,8 @@
                 }
             </style>
         </head>
+        <script async="async" src="/consent.js"></script>
+
         <!-- Google tag (gtag.js) -->
         <script
             async="async"
@@ -1176,6 +1211,15 @@
             gtag('config', 'G-4RTLM6HX39');
         </script>
         <body>
+            <!-- Google Tag Manager (noscript) -->
+            <noscript>
+                <iframe
+                    src="https://www.googletagmanager.com/ns.html?id=GTM-TF3MJBX9"
+                    height="0"
+                    width="0"
+                    style="display:none;visibility:hidden"></iframe>
+            </noscript>
+            <!-- End Google Tag Manager (noscript) -->
             <div class="navbar">
                 <div class="text-logo">
                     <a href="/" class="logo-link">
@@ -1184,7 +1228,7 @@
                     </a>
                 </div>
                 <div class="nav-links">
-                    <a>100% free, no sign up</a>
+                    <a href="https://github.com/linus-sch/Mind-Map-Wizard">Github</a>
                     <a class="navbutton" href="/new.html">Get Started</a>
                 </div>
             </div>
@@ -1192,8 +1236,8 @@
                 <div class="centered-div">
                     <div class="header" id="header">
                         <div class="header-badge">
-                            <a href="" style="color: #ffffff; text-decoration: none;">
-                                <p>Just launched! 🚀
+                            <a href="" style="color: #1e293b; text-decoration: none;">
+                                <p>Free and Open Source
                                 </a>
                             </p>
                         </div>
@@ -1253,7 +1297,7 @@
             <h2 class="section-title">How It Works</h2>
             <div class="process-boxes">
                 <div class="process-box">
-                    <img src="/img/p1-enter-topic.png" alt="Topic Input Box" class="process-img">
+                    <img src="/img/p1-enter-topic.webp" alt="Topic Input Box" class="process-img">
                     <div class="process-title">
                         <span class="process-number">1</span>
                         <h3>Enter Your Topic</h3>
@@ -1262,7 +1306,7 @@
                 </div>
 
                 <div class="process-box">
-                    <img src="/img/p2-gen-mind-map.png" alt="AI Generation Bot" class="process-img">
+                    <img src="/img/p2-gen-mind-map.webp" alt="AI Generation Bot" class="process-img">
                     <div class="process-title">
                         <span class="process-number">2</span>
                         <h3>AI Processing</h3>
@@ -1271,7 +1315,7 @@
                 </div>
                 <div class="process-box">
                     <img
-                        src="/img/p3-edit-mind-map.png"
+                        src="/img/p3-edit-mind-map.webp"
                         alt="Mind Map Editing Screenshot"
                         class="process-img">
                     <div class="process-title">
@@ -1511,6 +1555,56 @@
                         </p>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <button id="accordion-button-1" aria-expanded="false">
+                        <span class="accordion-title">Do I need to sign up to use Mind Map Wizard?</span>
+                        <svg
+                            class="accordion-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="10"
+                            height="18"
+                            viewbox="0 0 6 11">
+                            <polyline
+                                points=".675 .925 5.323 5.5 .675 10.075"
+                                fill="none"
+                                stroke="currentcolor"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="1.5"></polyline>
+                        </svg>
+
+                    </button>
+                    <div class="accordion-content">
+                        <p>
+                            No, you do not need to sign up to use Mind Map Wizard. You can start creating mind maps right away.
+                        </p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <button id="accordion-button-1" aria-expanded="false">
+                        <span class="accordion-title">Can I export my mind maps to other apps?</span>
+                        <svg
+                            class="accordion-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="10"
+                            height="18"
+                            viewbox="0 0 6 11">
+                            <polyline
+                                points=".675 .925 5.323 5.5 .675 10.075"
+                                fill="none"
+                                stroke="currentcolor"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="1.5"></polyline>
+                        </svg>
+
+                    </button>
+                    <div class="accordion-content">
+                        <p>
+                            Yes, you can easily export your mind maps in various formats and share them on other platforms.
+                        </p>
+                    </div>
+                </div>
             </div>
             <p style="margin-top: 30px;">Still have a question?
                 <a href="mailto:contact@mindmapwizard.com">Get in touch with us!</a>
@@ -1585,6 +1679,7 @@
 </ul>
 <div class="whitespace"></div>
 </div>
+<a href="https://www.producthunt.com/posts/mind-map-wizard-2?embed=true&utm_source=badge-featured&utm_medium=badge&utm_souce=badge-mind&#0045;map&#0045;wizard&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=867367&theme=light&t=1739633742200" alt="Mind&#0032;Map&#0032;Wizard - Create&#0032;infinite&#0032;Mind&#0032;Maps&#0032;using&#0032;AI&#0046;&#0032;Totally&#0032;free&#0033; | Product Hunt" style="width: 250px; height: 54px; margin: 20px;" width="250" height="54" /></a>
 <footer>
 <div class="footer-content">
 <div class="footer-links">
@@ -1604,36 +1699,7 @@
 </footer>
 
 <script>
-function showPopup() {
-if (!localStorage.getItem('disclaimerAccepted')) {
-    document
-        .getElementById('legalPopup')
-        .style
-        .display = 'flex';
-}
-}
 
-window.onload = function () {
-if (localStorage.getItem('disclaimerAccepted') !== "true" && !localStorage.getItem('mindmap-history')) {
-    document
-        .getElementById('legalPopup')
-        .style
-        .display = 'flex';
-}
-};
-
-function closePopup() {
-document
-    .getElementById('legalPopup')
-    .style
-    .display = 'none';
-}
-
-function acceptDisclaimer() {
-localStorage.setItem('disclaimerAccepted', 'true');
-closePopup();
-generateMindmap();
-}
 
 function generateMindmap() {
 console.log("generateMindmap called");
@@ -1690,49 +1756,49 @@ if (window.scrollY > 30) {
 const topics = [
 {
     "text": "Solar System and Planets",
-    "color": "#FF6F40"
+    "color": "#1e293b"
 }, {
     "text": "Digital Marketing 101",
-    "color": "#4DB8E1"
+    "color": "#1e293b"
 }, {
     "text": "Ancient Egyptian Civilization",
-    "color": "#4CD65E"
+    "color": "#1e293b"
 }, {
     "text": "Artificial Intelligence Basics",
-    "color": "#A45ED9"
+    "color": "#1e293b"
 }, {
     "text": "Nutrition and Wellness",
-    "color": "#2ED6B5"
+    "color": "#1e293b"
 }, {
     "text": "Renaissance Period Masters",
-    "color": "#6A8BFF"
+    "color": "#1e293b"
 }, {
     "text": "Understanding Emotions",
-    "color": "#FF4F8B"
+    "color": "#1e293b"
 }, {
     "text": "Climate Change Impact",
-    "color": "#FF4F4F"
+    "color": "#1e293b"
 }, {
     "text": "The Art of Storytelling",
-    "color": "#FFB74D"
+    "color": "#1e293b"
 }, {
     "text": "Mindfulness and Meditation",
-    "color": "#A8D94D"
+    "color": "#1e293b"
 }, {
     "text": "The Evolution of Technology",
-    "color": "#FF4F7D"
+    "color": "#1e293b"
 }, {
     "text": "Cultural Diversity and Inclusion",
-    "color": "#2EDB7D"
+    "color": "#1e293b"
 }, {
     "text": "The Science of Happiness",
-    "color": "#FFC300"
+    "color": "#1e293b"
 }, {
     "text": "Exploring World Cuisines",
-    "color": "#FF4F9D"
+    "color": "#1e293b"
 }, {
     "text": "The Future of Work",
-    "color": "#8A4FFF"
+    "color": "#1e293b"
 }
 ];
 
