--- a/view.html
+++ b/view.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>View Shared Mind Map - Mindmap AI</title>
+        <title>View Shared Mind Map - Mind Map AI</title>
         <meta
             name="description"
-            content="Mind Map Wizard: Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+            content="Guide your curiosity! Just type in a topic to create mind maps easily. That’s it! You’ll get your mind map instantly. It’s free, no sign-up needed and it’s open source.">
         <meta
             name="keywords"
             content="mind map, mind mapping, AI, text to mindmap, free mind map generator, no sign up, no ads">
@@ -15,7 +15,7 @@
         <meta property="og:title" content="Mind Map Wizard | Text to Mind Map AI">
         <meta
             property="og:description"
-            content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+            content="Guide your curiosity! Just type in a topic to create mind maps easily. That’s it! You’ll get your mind map instantly. It’s free, no sign-up needed and it’s open source.">
         <meta property="og:image" content="/img/meta-img.jpg">
 
         <meta property="og:type" content="website">
@@ -24,7 +24,7 @@
         <meta name="twitter:title" content="Mind Map Wizard | Text to Mind Map AI">
         <meta
             name="twitter:description"
-            content="Generate mind maps effortlessly by typing in a topic. Free, no sign-up, no ads.">
+            content="Guide your curiosity! Just type in a topic to create mind maps easily. That’s it! You’ll get your mind map instantly. It’s free, no sign-up needed and it’s open source.">
         <meta name="twitter:image" content="/img/meta-img.jpg">
 
         <link rel="icon" type="image/png" href="/img/favicon16.png" sizes="16x16">
@@ -42,6 +42,24 @@
         <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.16.1"></script>
         <script src="https://cdn.jsdelivr.net/npm/markmap-view@0.16.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader@0.16"></script>
+        <!-- Google Tag Manager -->
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+                var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s),
+                    dl = l != 'dataLayer'
+                        ? '&l=' + l
+                        : '';
+                j.async = true;
+                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                f
+                    .parentNode
+                    .insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-TF3MJBX9');
+        </script>
+        <!-- End Google Tag Manager -->
         <style>
             :root {
                 --primary-color: #C667FF;
@@ -51,6 +69,16 @@
                 --border-color: #e2e8f0;
                 --card-background: #ffffff;
                 --error-color: #dc2626;
+            }
+
+            @font-face {
+                font-family: 'Open Sans';
+                src: url("/OpenSans-ExtraBold.ttf") format('truetype'), url("/OpenSans-ExtraBold.ttf") format('ttf');
+                font-weight: 800;
+                font-style: normal;
+                font-display: swap;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
             }
 
             body {
@@ -339,8 +367,93 @@
                     display: none;
                 }
             }
+            .help-link {
+                padding: 5px;
+                border-radius: 10px;
+                background-color: #f0f0f0;
+                border: 1px solid #f0f0f0;
+                text-decoration: none;
+            }
+
+            .help-link:hover {
+                border: 1px solid #ddd;
+            }
+
+            .popup {
+                display: flex;
+                position: fixed;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.32);
+                justify-content: center;
+                align-items: center;
+                z-index: 1100;
+            }
+
+            .popup-content {
+                background-color: white;
+                padding: 20px;
+                border-radius: 20px;
+                text-align: left;
+                max-width: 300px;
+                display: flex;
+                line-height: 1.5;
+                flex-direction: column;
+                align-items: space-between;
+            }
+
+            .accept-terms-button,
+            .decline-terms-button {
+                margin: 5px;
+                padding: 12px 20px;
+                border-radius: 20px;
+                cursor: pointer;
+                font-size: 0.9rem;
+            }
+
+            .accept-terms-button {
+                background-color: var(--primary-color);
+                color: white;
+                border: none;
+                transition: all 0.3s ease;
+            }
+
+            .decline-terms-button {
+                background-color: var(--border-color);
+                color: black;
+                border: none;
+            }
+
+            .accept-terms-button:hover {
+                background-color: #b73cfe;
+            }
+
+            .decline-terms-button:hover {
+                background-color: rgb(215, 215, 215);
+            }
+
+            .legal-purposes {
+                margin: 0;
+                padding-left: 20px;
+            }
+
+            .popup-content a {
+                background-color: #f0f0f0;
+                padding: 3px;
+                border-radius: 6px;
+                text-decoration: none;
+                transition: all 0.1s ease;
+                font-size: 1rem;
+            }
+            .popup-content a:hover {
+                background-color: #e6e6e6;
+            }
+
         </style>
     </head>
+    <script async="async" src="/consent.js"></script>
+
     <!-- Google tag (gtag.js) -->
     <script
         async="async"
@@ -356,6 +469,41 @@
     </script>
 
     <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript>
+            <iframe
+                src="https://www.googletagmanager.com/ns.html?id=GTM-TF3MJBX9"
+                height="0"
+                width="0"
+                style="display:none;visibility:hidden"></iframe>
+        </noscript>
+        <!-- End Google Tag Manager (noscript) -->
+        <div class="popup" id="legalPopup">
+            <div class="popup-content">
+                <div>
+                    <h2>🍪 Cookies</h2>
+                    <p>To proceed, you need to agree to our
+                        <a href="/terms-of-use.html" style="color: var(--text-color);">Terms of Use</a>
+                        and
+                        <a
+                            href="/privacy-policy.html"
+                            onclick="event.preventDefault();"
+                            style="color: var(--text-color);">Privacy Policy</a>
+                        <br>
+                        <div class="whitespace"></div>
+
+                        <strong>Purposes:</strong>
+                        <ul class="legal-purposes">
+                            <li>Functionality</li>
+                            <li>Analytics</li>
+                        </ul>
+                    </p>
+                    <div class="whitespace"></div>
+                </div>
+                <button onclick="closePopup()" class="decline-terms-button">Decline</button>
+                <button onclick="acceptDisclaimer()" class="accept-terms-button">Accept and Continue</button>
+            </div>
+        </div>
         <div class="header">
             <a href="/" class="logo-link">
                 <img src="img/logo.png" alt="Mind Map Wizard Logo" class="logo">
@@ -385,10 +533,27 @@
             <textarea id="markdown-textarea" spellcheck="false"></textarea>
 
             <div class="editor-buttons">
-                <small class="markdown-disclaimer">Use markdown formatting.</small>
+                <small
+                    class="markdown-disclaimer"
+                    style="display: inline-block; vertical-align: middle;">Use markdown formatting.
+                    <a href="/help/mind-map-editing.html" style="color: #1e293b;" class="help-link">
+                        Help
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="help-link-svg"
+                            height="16px"
+                            viewbox="0 -960 960 960"
+                            width="16px"
+                            fill="#1e293b"
+                            style="vertical-align: middle; margin-top: -3px;">
+                            <path
+                                d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h240q17 0 28.5 11.5T480-800q0 17-11.5 28.5T440-760H200v560h560v-240q0-17 11.5-28.5T800-480q17 0 28.5 11.5T840-440v240q0 33-23.5 56.5T760-120H200Zm560-584L416-360q-11 11-28 11t-28-11q-11-11-11-28t11-28l344-344H600q-17 0-28.5-11.5T560-800q0-17 11.5-28.5T600-840h200q17 0 28.5 11.5T840-800v200q0 17-11.5 28.5T800-560q-17 0-28.5-11.5T760-600v-104Z"/>
+                        </svg>
+                    </a>
+                </small>
 
                 <button class="editor-button cancel-button" id="cancel-edit">Cancel</button>
-                <button class="editor-button save-button" id="save-edit">Save Changes</button>
+                <button class="editor-button save-button" id="save-edit">Save</button>
             </div>
         </div>
         <div class="error-message" id="error-message"></div>
@@ -450,7 +615,7 @@
                     document
                         .getElementById('topic-title')
                         .textContent = data.topic;
-                    document.title = `${data.topic} - Mindmap AI`;
+                    document.title = `${data.topic} - Mind Map AI`;
                     renderMindMap(data.markdown);
                     setupButtons(data.markdown, data.topic);
                 } catch (error) {
