chore: update index.html
betwen -> between

--- a/index.html
+++ b/index.html
@@ -1531,7 +1531,7 @@
                 </div>
                 <div class="accordion-item">
                     <button id="accordion-button-1" aria-expanded="false">
-                        <span class="accordion-title">What is the difference betwen a mind map and an outline?</span>
+                        <span class="accordion-title">What is the difference between a mind map and an outline?</span>
                         <svg
                             class="accordion-icon"
                             xmlns="http://www.w3.org/2000/svg"
